test/try_fail_errors/table.yasl.err
TypeError: table.__len expected arg in position 0 to be of type table, got arg of type int. (line 1)
TypeError: table.clear expected arg in position 0 to be of type table, got arg of type int. (line 2)
TypeError: table.copy expected arg in position 0 to be of type table, got arg of type int. (line 3)
TypeError: table.keys expected arg in position 0 to be of type table, got arg of type int. (line 4)
TypeError: unable to use mutable object of type list as key. (line 5)
TypeError: unable to use mutable object of type list as key. (line 6)
TypeError: table.remove expected arg in position 0 to be of type table, got arg of type int. (line 7)
TypeError: table.tostr expected arg in position 0 to be of type table, got arg of type int. (line 8)
TypeError: table.values expected arg in position 0 to be of type table, got arg of type int. (line 9)
TypeError: table.__get expected arg in position 0 to be of type table, got arg of type int. (line 10)
TypeError: table.__set expected arg in position 0 to be of type table, got arg of type int. (line 11)
TypeError: table.__bor expected arg in position 0 to be of type table, got arg of type int. (line 12)
TypeError: table.__bor expected arg in position 1 to be of type table, got arg of type int. (line 13)